2003-06-12  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.c (SEEK_INIT): New macro.

2003-06-07  Keisuke Nishida  <knishida@netlab.jp>

	* numeric.c, numeric.h: No longer use gmp.
	(cob_decimal_init, cob_decimal_clear): Removed.

2003-06-07  Keisuke Nishida  <knishida@netlab.jp>

	* common.h (cob_module): New member `collating_sequence'.
	* common.c (CMP): New macro.
	(cmp_char, cmp_all, cmp_alnum): Use CMP.

2003-05-29  Keisuke Nishida  <knishida@netlab.jp>

	* common.h (cob_switch): Removed.
	* common.c (cob_set_switch, cob_get_switch): New function.

2003-05-27  Keisuke Nishida  <knishida@netlab.jp>

	* common.h (cob_module): Renamed from cob_environment.
	(cob_current_module): Renamed from cob_env.
	(cob_module_enter): Renamed from cob_push_environment.
	(cob_module_leave): Renamed from cob_pop_environment.
	(cob_module_init): Removed.
	* call.c (cob_resolve): Do not call cob_module_init.

2003-05-20  Keisuke Nishida  <knishida@netlab.jp>

	* strings.c (cob_string_delimited): New function.
	(cob_string_append): Take only one argument.

2003-05-18  Keisuke Nishida  <knishida@netlab.jp>

	* common.c (ding_on_error): Removed.

2003-05-18  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.c: Large file system support.
	(_LFS64_LARGEFILE) [WITH_LFS64]: Defined.
	(_LFS64_STDIO) [WITH_LFS64]: Defined.
	(_FILE_OFFSET_BITS) [WITH_LFS64]: Defined.
	(_LARGEFILE64_SOURCE) [WITH_LFS64]: Defined.

2003-05-18  Keisuke Nishida  <knishida@netlab.jp>

	* common.h (cob_d2i, cob_i2d): New macros.

2003-05-15  Keisuke Nishida  <knishida@netlab.jp>

	* move.c (COPY_COMMON_REGION): Removed.
	(store_common_region): New function.
	(cob_display_to_int): New function.
	(cob_binary_to_int): New function.
	(cob_get_int): Optimized.

2003-05-13  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.c (INITIAL_FLAGS): Set to O_BINARY when _WIN32 is defined
	rather than __MINGW32__.
	(file_open): Open in binary mode.
	(cob_open): Make sure that errno == ENOENT after stat.
