@@ -1,3 +1,8 @@
+2003-06-18  Keisuke Nishida  <knishida@netlab.jp>
+
+	* fileio.c (relative_rewrite): Refer to the relative key unless
+	the access mode is sequential.
+
 2003-06-12  Keisuke Nishida  <knishida@netlab.jp>
 
 	* fileio.c (SEEK_INIT): New macro.
